# starky_bls12_381

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aggregate_proof.rs  big_arithmetic.rs  calc_pairing_precomp.rs  constrain.rs  cyclotomic_exponent.rs  ecc_aggregate.rs  final_exponentiate.rs  forbenium_map.rs  fp.rs  fp12.rs  fp12_mul.rs  fp12_mult_starky.rs  fp2.rs  fp2_mult_starky.rs  fp2_plonky2.rs  fp6.rs  fp6_mult_starky.rs  fp_mult_starky.rs  fp_plonky2.rs  g1.rs  g1_plonky2.rs  g2_plonky2.rs  hash_to_curve.rs  hash_to_field.rs  layout.rs  lib.rs  light_client_update_period_1052.json  light_client_update_period_1053.json  light_client_update_period_633.json  light_client_update_period_634.json  main.rs  miller_loop.rs  multiply_by_014.rs  native.rs  trace.rs  utils.rs
