[package]
name = "starky_bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = {git = "https://github.com/Electron-Labs/plonky2.git", rev = "71dff6e9827f501bc59416dc25ce06c4aec030ab"}
starky = {git = "https://github.com/Electron-Labs/plonky2.git", rev = "71dff6e9827f501bc59416dc25ce06c4aec030ab"}
anyhow = "1.0.40"
hex = "0.4"
to-binary = "0.4.0"
num-bigint = "0.4.4"
itertools = "0.10.3"

[profile.test]
opt-level = 3
