[package]
name = "starky_bls12_381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff"}
starky = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff"}
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
anyhow = "1.0.40"
hex = "0.4"
to-binary = "0.4.0"
num-bigint = "0.4.4"
itertools = "0.10.3"
env_logger = { version = "0.9.0", default-features = false }
log = { version = "0.4.14", default-features = false }

[profile.test]
opt-level = 3
